Fix environment variable names for Vite

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@
 
 # Supabase Project URL (Required)
 # Get this from your Supabase dashboard: Settings > API
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
+VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 
 # Supabase Anonymous Key (Required)
 # This is safe to use in client-side code - it respects RLS policies
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # Supabase Service Role Key (Server-side only)
 # DO NOT expose this in client-side code - it bypasses RLS
